<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yapco</string>
    <string name="action_settings">Settings</string>
    <string name="add_feed_button">Add Feed</string>
    <string name="enter_rss_feed">Enter RSS Feed URL:</string>
    <string name="hint_edit_text">RSS Feed URL</string>
    <string name="new_feed">Add Feed</string>
    <string name="exit">Exit</string>
    <string name="about_application">About Application</string>
    <string name="update_channel">Update Episodes</string>
    <string name="unsubscribe_channel">Unsubscribe</string>
    <string name="podcast_description">Podcast Description</string>
    <string name="visit_web_page">Visit Web Page</string>
    <string name="mark_all_as_read">Mark all read</string>
    <string name="play">Play</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="cancel">Cancel</string><string name="episodes">Episodes</string>
    <string name="start_updater_service">Start Updater Service</string>
    <string name="stop_updater_service">Stop Updater Service</string>
    <string name="refresh_service">Refresh Service</string>

</resources>